--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.13.0"
+  },
+  "pkg": {
+    "assets": [
+      "public/**/*"
+    ]
   }
 }
